Fix Scrollbar in CSS

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -83,12 +83,12 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-#body-inner::-webkit-scrollbar {
+.tele #body-inner::-webkit-scrollbar {
     display: none;
   }
   
 /* Hide scrollbar for IE, Edge and Firefox */
-#body-inner {
+.tele #body-inner {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
